<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.user.relcal.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--   ================================================= MASS  -->
    <EditText
        android:id="@+id/Z_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/BEA_view"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/Sp_text"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/BEA_text"
        app:layout_constraintRight_toLeftOf="@+id/BEA_text"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/mass_view"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/mass_label"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <EditText
        android:id="@+id/mass_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/mass_view"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toRightOf="@+id/mass_view"
        app:layout_constraintRight_toRightOf="parent" />

    <!--   ================================================= Charge  -->

    <!--   ================================================= MASS NUMBER -->

    <!--   ================================================= SEPERATION ENERGY  -->
    <TextView
        android:id="@+id/Sp_view"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Sp_label"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/BEA_view"
        app:layout_constraintRight_toLeftOf="@+id/BEA_view"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!--   ================================================= SEPERATION ENERGY  -->

    <!--   ================================================= KINETIC ENERGY PRE NUCLEON  -->
    <!-- Absolute position  -->
    <Button
        android:id="@+id/ke_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ke_label"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sp_text"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/ke_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/ke_but"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"/>

    <!--   ================================================= MOMENTUM  -->
    <Button
        android:id="@+id/momt_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/momt_label"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@+id/ke_but"
        app:layout_constraintTop_toBottomOf="@+id/ke_but"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/momt_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/momt_but"
        app:layout_constraintRight_toRightOf="@+id/ke_text"
        tools:ignore="RtlHardcoded"/>

    <!--   ================================================= GAMMA  -->
    <Button
        android:id="@+id/gamma_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/gamma_label"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@+id/momt_but"
        app:layout_constraintTop_toBottomOf="@+id/momt_but"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/gamma_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="-8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/gamma_but"
        app:layout_constraintRight_toRightOf="@+id/momt_text"
        tools:ignore="RtlHardcoded" />

    <!--   ================================================= BETA  -->
    <Button
        android:id="@+id/beta_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/beta_label"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@+id/gamma_but"
        app:layout_constraintTop_toBottomOf="@+id/gamma_but"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/beta_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="-16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/beta_but"
        app:layout_constraintRight_toRightOf="@+id/gamma_text"
        tools:ignore="RtlHardcoded" />

    <!--   ================================================= LENGTH  -->
    <TextView
        android:id="@+id/length_view"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/length_label"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@+id/beta_but"
        app:layout_constraintTop_toBottomOf="@+id/beta_but"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/length_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/length_view"
        app:layout_constraintRight_toRightOf="@+id/beta_text"
        tools:ignore="RtlHardcoded" />

    <!--   ================================================= TIME OF FLIGHT  -->
    <Button
        android:id="@+id/tof_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/tof_label"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@+id/length_view"
        app:layout_constraintTop_toBottomOf="@+id/length_view"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/tof_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/tof_but"
        app:layout_constraintRight_toRightOf="@+id/length_text"
        tools:ignore="RtlHardcoded" />

    <!--   ================================================= RIGIDITY  -->
    <Button
        android:id="@+id/Brho_but"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/Brho_label"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="@+id/tof_but"
        app:layout_constraintTop_toBottomOf="@+id/tof_but"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/Brho_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/Brho_but"
        app:layout_constraintRight_toRightOf="@+id/tof_text"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/A_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/A_label"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Z_text"
        app:layout_constraintLeft_toRightOf="@+id/Z_text"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/A_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/A_view"
        app:layout_constraintLeft_toRightOf="@+id/A_view"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.7" />

    <EditText
        android:id="@+id/Sym_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/Z_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Z_view" />




    <TextView
        android:id="@+id/BEA_view"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/BEA_label"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/Z_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Z_label"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Z_text"
        app:layout_constraintRight_toLeftOf="@+id/Z_text"
        android:layout_marginRight="8dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Sn_label"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/BEA_view"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/BEA_view"
        app:layout_constraintHorizontal_bias="0.4" />

    <EditText
        android:id="@+id/BEA_text"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/BEA_view"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/BEA_view"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/BEA_view" />

    <EditText
        android:id="@+id/Sn_text"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/BEA_text"
        app:layout_constraintLeft_toRightOf="@+id/BEA_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
