<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.relcal.MainActivity">

    <TextView
        android:id="@+id/textViewLB"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="( "
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/editText_Pa" />

    <EditText
        android:id="@+id/editText_Pa"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="12C"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Pb"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="2H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewLB" />

    <EditText
        android:id="@+id/editText_P1"
        android:layout_width="60dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="1H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewComma" />

    <TextView
        android:id="@+id/textView_P2"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:text="13C"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewRB"
        app:layout_constraintStart_toEndOf="@+id/textViewRB" />

    <TextView
        android:id="@+id/textViewComma"
        android:layout_width="9dp"
        android:layout_height="30dp"
        android:text=","
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pb"
        app:layout_constraintStart_toEndOf="@+id/editText_Pb" />

    <TextView
        android:id="@+id/textViewRB"
        android:layout_width="11dp"
        android:layout_height="wrap_content"
        android:text=")"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_P1"
        app:layout_constraintStart_toEndOf="@+id/editText_P1" />

    <TextView
        android:id="@+id/textView_Pa"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="166dp"
        android:text="@string/beam_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_4vPa"
        android:layout_width="300dp"
        android:layout_height="28dp"
        android:fontFamily="monospace"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Pa"
        app:layout_constraintStart_toEndOf="@+id/textView_Pa" />

    <TextView
        android:id="@+id/textView_TLab"
        android:layout_width="102dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:text="@string/TLab_label"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_TLab"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView_TLab"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="274dp"
        android:layout_height="33dp"
        android:layout_marginTop="120dp"
        android:max="180"
        android:min="0"
        android:progress="0"
        app:layout_constraintStart_toEndOf="@+id/textView_thetaCM"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_thetaCM"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/thetaCM_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Pb"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/target_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Pa" />

    <TextView
        android:id="@+id/textView_4vPb"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Pb"
        app:layout_constraintStart_toEndOf="@+id/textView_Pb" />

    <TextView
        android:id="@+id/textView_P1"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/p1_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Pb" />

    <TextView
        android:id="@+id/textView_4vP1"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P1"
        app:layout_constraintStart_toEndOf="@+id/textView_P1" />

    <TextView
        android:id="@+id/textView_P2_2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/p2_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_P1" />

    <TextView
        android:id="@+id/textView_4vP2"
        android:layout_width="300dp"
        android:layout_height="24dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P2_2"
        app:layout_constraintStart_toEndOf="@+id/textView_P2_2" />

    <TextView
        android:id="@+id/textView_theta_reading"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_thetaCM"
        app:layout_constraintStart_toEndOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView_Ex"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:text="@string/Ex_label"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintEnd_toStartOf="@+id/editText_Ex" />

    <EditText
        android:id="@+id/editText_Ex"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Ex"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>